Fixed layout bug in dashboards

--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -5,7 +5,7 @@ html, body, .mat-sidenav-container {
 }
 
 :host {
-    flex: 1 1 100%;
+    flex: 1 1 auto;
     display: flex;
     flex-flow: column;
 }
