--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -44,7 +44,7 @@ body {
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: rgb(49, 49, 49); 
+  background: rgb(66, 66, 66); 
 }
  
 /* Handle */
